--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,2 +1,9 @@
 @import './common';
 @import './example';
+
+// portfolio
+@import './portfolio';
+// base
+@import './base/reset';
+// utils
+@import './utils/variables';
