--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,10 +1,18 @@
-<header>
-    <nav>
-        <a href="./index.html">Taraskina</a>
-        <ul>
-            <li><a href="./portfolio.html">portfolio</a></li>
-            <li><a href="">about</a></li>
-            <li><a href="">contacts</a></li>
-        </ul>
-    </nav>
+<header class="header">
+    <div class="container">
+        <nav class="header__navigation">
+            <a class="logo" href="./index.html">Taraskina</a>
+            <ul class="header__nav-list">
+                <li class="header__nav-item">
+                    <a class="header__link" href="./portfolio.html">portfolio</a>
+                </li>
+                <li class="header__nav-item">
+                    <a class="header__link" href="">about</a>
+                </li>
+                <li class="header__nav-item">
+                    <a class="header__link" href="">contacts</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
 </header>
