add colors for svg

--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -3,4 +3,6 @@
     --background-color: #1d1716;
     --secondary-bg-color: #402a23;
     --accent-color: #a55233;
+    --svg-fill-first: #4267B2;
+    --svg-fill-second:#C13584;
 }
