--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,50 +1,52 @@
-<footer class="footer">
+<footer class="footer container">
     <div class="container">
         <address class="footer__address">
             <ul class="footer__soc-list">
-                <li class="footer__soc-item">
-                    <a class="footer__soc-link soc-instagram-list" href="" target="_blank" rel="noreferrer noopener" aria-label="Посилання на інстаграм">
-                        <svg class="footer__soc-svg soc-instagram" width="24" height="24">
+                <li class="footer__soc-item soc-instagram-list">
+                    <a class="footer__soc-link" href="https://instagram.com/ketrin_taraskina?igshid=MzRlODBiNWFlZA==" target="_blank" rel="noreferrer noopener" aria-label="Посилання на інстаграм">
+                        <svg class="footer__soc-svg soc-instagram" width="22" height="22">
                             <use href="./images/symbol-defs.svg#icon-instagram"></use>
                         </svg>
                     </a>
                 </li>
-                <li class="footer__soc-item">
-                    <a class="footer__soc-link soc-facebook-list" href="" aria-label="Посилання на телеграм" target="_blank" rel="noreferrer noopener">
-                        <svg class="footer__soc-svg soc-facebook" width="24" height="24">
+                <li class="footer__soc-item soc-facebook-list">
+                    <a class="footer__soc-link" href="" aria-label="Посилання на телеграм" target="_blank" rel="noreferrer noopener">
+                        <svg class="footer__soc-svg soc-facebook" width="22" height="22">
                             <use href="./images/symbol-defs.svg#icon-telegram"></use>
                         </svg>
                     </a>
                 </li>
-                <li class="footer__soc-item">
-                    <a class="footer__soc-link soc-facebook-list" href="https://www.facebook.com/KetrinTaraskina" aria-label="Посилання на фейсбук" target="_blank" rel="noreferrer noopener">
-                        <svg class="footer__soc-svg soc-facebook" width="24" height="24">
+                <li class="footer__soc-item soc-facebook-list">
+                    <a class="footer__soc-link" href="https://www.facebook.com/KetrinTaraskina" aria-label="Посилання на фейсбук" target="_blank" rel="noreferrer noopener">
+                        <svg class="footer__soc-svg soc-facebook" width="22" height="22">
                             <use href="./images/symbol-defs.svg#icon-facebook"></use>
                         </svg>
                     </a>
                 </li>
-                <li class="footer__soc-item">
-                    <a class="footer__soc-link soc-facebook-list" href="" aria-label="Посилання на лінкедин" target="_blank" rel="noreferrer noopener">
-                        <svg class="footer__soc-svg soc-facebook" width="24" height="24">
+                <li class="footer__soc-item soc-facebook-list">
+                    <a class="footer__soc-link" href="https://www.linkedin.com/in/%D0%BA%D0%B0%D1%82%D0%B5%D1%80%D0%B8%D0%BD%D0%B0-%D1%82%D0%B0%D1%80%D0%B0%D1%81%D0%B5%D0%B2%D0%B8%D1%87-%D0%B3%D1%80%D0%B8%D0%B2%D1%96%D0%BD%D1%81%D1%8C%D0%BA%D0%B0-99ba50274/" aria-label="Посилання на лінкедин" target="_blank" rel="noreferrer noopener">
+                        <svg class="footer__soc-svg soc-facebook" width="22" height="22">
                             <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                         </svg>
                     </a>
                 </li>
             </ul>
+            <a class="logo" href="./index.html">Taraskina</a>
             <ul class="footer__contacts">
                 <li class="footer__contacts-item">
-                    <a href="tel:380683391302">
-                        <svg width="24" height="24">
+                    <a class="footer__contacts-link" href="tel:380683391302">
+                        <svg class="footer__contacts-svg" width="24" height="24">
                             <use href="./images/symbol-defs.svg#icon-phone"></use>
                         </svg>
                         380683391302
                     </a>
                 </li>
                 <li class="footer__contacts-item">
-                    <a href="mailto:">
-                        <svg width="24" height="24">
+                    <a class="footer__contacts-link" href="mailto:ketrintaraskina@gmail.com">
+                        <svg class="footer__contacts-svg" width="24" height="24">
                             <use href="./images/symbol-defs.svg#icon-letter"></use>
                         </svg>
+                        ketrintaraskina@gmail.com
                     </a>
                 </li>
             </ul>
