changes page language

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -12,4 +12,5 @@
 @import './components/container';
 // layouts
 @import './layouts/header';
+@import './layouts/hero';
 @import './layouts/footer';
