--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,20 +1,20 @@
-<section>
+<section class="advantages">
     <div class="container">
-        <ul>
+        <ul class="advantages_list">
             <li>
-                <h3>Lorem ipsum dolor sit.</h3>
+                <h3 class="advantages_titles">Lorem ipsum dolor sit.</h3>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex nulla illo unde culpa natus id reprehenderit esse vel veniam repudiandae?</p>
             </li>
             <li>
-                <h3>Lorem ipsum dolor sit.</h3>
+                <h3 class="advantages_titles">Lorem ipsum dolor sit.</h3>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex nulla illo unde culpa natus id reprehenderit esse vel veniam repudiandae?</p>
             </li>
             <li>
-                <h3>Lorem ipsum dolor sit.</h3>
+                <h3 class="advantages_titles">Lorem ipsum dolor sit.</h3>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex nulla illo unde culpa natus id reprehenderit esse vel veniam repudiandae?</p>
             </li>
             <li>
-                <h3>Lorem ipsum dolor sit.</h3>
+                <h3 class="advantages_titles">Lorem ipsum dolor sit.</h3>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex nulla illo unde culpa natus id reprehenderit esse vel veniam repudiandae?</p>
             </li>
         </ul>
