--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -2,20 +2,20 @@
     <div class="container">
         <ul class="advantages_list">
             <li>
-                <h3 class="advantages_titles">Lorem ipsum dolor sit.</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex nulla illo unde culpa natus id reprehenderit esse vel veniam repudiandae?</p>
+                <h3 class="advantages__titles">Lorem ipsum dolor sit.</h3>
+                <p class="advantages__paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex nulla illo unde culpa natus id reprehenderit esse vel veniam repudiandae?</p>
             </li>
             <li>
-                <h3 class="advantages_titles">Lorem ipsum dolor sit.</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex nulla illo unde culpa natus id reprehenderit esse vel veniam repudiandae?</p>
+                <h3 class="advantages__titles">Lorem ipsum dolor sit.</h3>
+                <p class="advantages__paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex nulla illo unde culpa natus id reprehenderit esse vel veniam repudiandae?</p>
             </li>
             <li>
-                <h3 class="advantages_titles">Lorem ipsum dolor sit.</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex nulla illo unde culpa natus id reprehenderit esse vel veniam repudiandae?</p>
+                <h3 class="advantages__titles">Lorem ipsum dolor sit.</h3>
+                <p class="advantages__paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex nulla illo unde culpa natus id reprehenderit esse vel veniam repudiandae?</p>
             </li>
             <li>
-                <h3 class="advantages_titles">Lorem ipsum dolor sit.</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex nulla illo unde culpa natus id reprehenderit esse vel veniam repudiandae?</p>
+                <h3 class="advantages__titles">Lorem ipsum dolor sit.</h3>
+                <p class="advantages__paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex nulla illo unde culpa natus id reprehenderit esse vel veniam repudiandae?</p>
             </li>
         </ul>
     </div>
