add component section

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -10,6 +10,7 @@
 @import './utils/variables';
 // components
 @import './components/container';
+@import './components/section';
 // layouts
 @import './layouts/header';
 @import './layouts/hero';
