--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,4 +1,4 @@
-<section>
+<section class="about section">
     <div class="container">
         <h2>Про нас</h2>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita quibusdam facere consequatur perspiciatis corporis quis officiis velit eum, odio facilis, ad sint nostrum soluta inventore nihil iste cum commodi aliquam!</p>
