--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -1,7 +1,6 @@
 .header {
    background-color: var(--secondary-bg-color);
-   padding-top: 30px;
-   padding-bottom: 30px;
+   padding: 30px 0;
 }
 
 .header__navigation {
