--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer container">
+<footer class="footer">
     <div class="container">
         <address class="footer__address">
             <ul class="footer__soc-list">
