changes path to background photos

--- a/src/sass/layouts/_hero.scss
+++ b/src/sass/layouts/_hero.scss
@@ -1,7 +1,6 @@
 .hero {
-    padding-top: 300px;
-    padding-bottom: 300px;
-    background-image: linear-gradient(to bottom, rgba(10, 10, 10, 0.5), rgba(20, 20, 20, 0.7)), url(https://scontent.flwo4-1.fna.fbcdn.net/v/t39.30808-6/278243342_3893263187565715_5154316446856748625_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=5f2048&_nc_ohc=S57kEufgzdQAX9qrFML&_nc_ht=scontent.flwo4-1.fna&oh=00_AfB4eUe51IXU3agX-6UreaM9E3f9ls0hRK2qDbVT7o4gxw&oe=653D076C);
+    padding: 300px 0;
+    background-image: linear-gradient(to bottom, rgba(10, 10, 10, 0.5), rgba(20, 20, 20, 0.7)), url(https://scontent.flwo4-1.fna.fbcdn.net/v/t39.30808-6/278243342_3893263187565715_5154316446856748625_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=5f2048&_nc_ohc=g1I8CEvBROIAX9Jr5FV&_nc_ht=scontent.flwo4-1.fna&oh=00_AfA9uN3HLd0SiinQ0EmCic9By8ygJSJRA6t5eheDrH8oFg&oe=654ADF2C);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
