--- a/src/sass/_portfolio.scss
+++ b/src/sass/_portfolio.scss
@@ -7,8 +7,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding-top: 100px;
-    padding-bottom: 100px;
+    padding: 100px 0;
 }
 
 .portfolio__list-item {
@@ -40,8 +39,7 @@ cursor: pointer;
 }
 
 .portfolio__title {
-    margin-top: 8px;
-    margin-bottom: 8px;
+    margin: 8px 0;
 }
 
 .portfolio__img {
