--- a/src/sass/components/_container.scss
+++ b/src/sass/components/_container.scss
@@ -1,14 +1,14 @@
 .container {
     @media screen and (min-width:480px) {
-        padding-left: 15px;
-        padding-right: 15px;
+        padding: 0 15px;
+        margin: 0 auto;
     }
     @media screen and (min-width:768px) {
-        padding-left: 32px;
-        padding-right: 32px;
+        padding: 0 32px;
+        margin: 0 auto;
     }
     @media screen and (min-width:1200px) {
-        padding-left: 32px;
-        padding-right: 32px;
+        padding: 0 32px;
+        margin: 0 auto;
     }
 }
