add title class

--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,5 +1,5 @@
 <section class="gallery section">
     <div class="container">
-        <h2>Галерея</h2>
+        <h2 class="title">Галерея</h2>
     </div>
 </section>
