fix adventage and styled about

--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,6 +1,6 @@
 <section class="advantages section">
     <div class="container">
-        <ul class="advantages_list">
+        <ul class="advantages__list">
             <li>
                 <h3 class="advantages__titles">Lorem ipsum dolor sit.</h3>
                 <p class="advantages__paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex nulla illo unde culpa natus id reprehenderit esse vel veniam repudiandae?</p>
