--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -11,8 +11,10 @@
 // components
 @import './components/container';
 @import './components/section';
+@import './components/title';
 // layouts
 @import './layouts/header';
 @import './layouts/hero';
 @import './layouts/advantages';
+@import './layouts/about';
 @import './layouts/footer';
