--- a/src/sass/layouts/_about.scss
+++ b/src/sass/layouts/_about.scss
@@ -16,4 +16,7 @@
 
 .about__img {
     border-radius: 100px;
+     box-shadow: 0px 0px 39px 5px rgba(243,188,119,1);
+    -moz-box-shadow: 0px 0px 39px 5px rgba(243,188,119,1);
+    box-shadow: 0px 0px 39px 5px rgba(243,188,119,1);
 }
