markup and styled gallery

--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,5 +1,27 @@
 <section class="gallery section">
     <div class="container">
         <h2 class="title">Галерея</h2>
+        <div>
+            <ul class="gallery__list">
+                <li>
+                    <a href="portfolio.html">
+                        <img class="gallery__list-item" src="https://scontent.flwo4-1.fna.fbcdn.net/v/t39.30808-6/269757244_669773911066254_8686939361783588632_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=5f2048&_nc_ohc=0Ygu5wg3-_EAX8GgrqQ&_nc_ht=scontent.flwo4-1.fna&oh=00_AfCXTd5LU_JPtwU3-2mlIhEZUX7vrqo-QMNmf7xr0-gTfQ&oe=654D89E1" width="500" height="500" alt="Гобелени">
+                    </a>
+                    <p class="gallery__list-discription">Гобелени</p>
+                </li>
+                <li>
+                    <a href="portfolio.html">
+                        <img class="gallery__list-item" src="https://scontent.flwo4-1.fna.fbcdn.net/v/t31.18172-8/13680226_2102683846623667_6751291113322460489_o.jpg?_nc_cat=107&ccb=1-7&_nc_sid=4dc865&_nc_ohc=5DhjG5K8rrQAX9-Jbe3&_nc_ht=scontent.flwo4-1.fna&oh=00_AfDiJICU5ANDUii1ZxFbCzG8Zx9Etqv1GH-Xn9rq6K2htw&oe=6570B287" width="500" height="500" alt="Живопис">
+                    </a>
+                    <p class="gallery__list-discription">Живопис</p>
+                </li>
+                <li>
+                    <a href="portfolio.html">
+                        <img class="gallery__list-item" src="https://scontent.flwo4-1.fna.fbcdn.net/v/t1.6435-9/122077206_1719170748250306_6559740036273417745_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=0f5592&_nc_ohc=Bg6mO3zYiGkAX_ArGDT&_nc_ht=scontent.flwo4-1.fna&oh=00_AfALUAWC_1NCuCQHWIAdXW-mBwWVIl-US4TVtJUqEUMnXQ&oe=6570C898" width="500" height="500" alt="Косівський розпис">
+                    </a>
+                    <p class="gallery__list-discription">Косівський розпис</p>
+                </li>
+            </ul>
+        </div>
     </div>
 </section>
