--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -17,4 +17,5 @@
 @import './layouts/hero';
 @import './layouts/advantages';
 @import './layouts/about';
+@import './layouts/gallery';
 @import './layouts/footer';
