add testing png

--- a/src/sass/layouts/_advantages.scss
+++ b/src/sass/layouts/_advantages.scss
@@ -11,3 +11,47 @@
     margin-bottom: 30px;
     font-size: 24px;
 }
+
+.first-item::before {
+    content: "";
+    background-image: url('../images/pngwing.com\ \(3\).png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 200px;
+    height: 200px;
+    display: block; 
+    margin: 0 auto;
+}
+
+.second-item::before {
+    content: "";
+    background-image: url('../images/pngwing.com\ \(1\).png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 200px;
+    height: 200px;
+    display: block; 
+    margin: 0 auto;
+}
+
+.thirt-item::before {
+    content: "";
+    background-image: url('../images/рим.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 200px;
+    height: 200px;
+    display: block; 
+    margin: 0 auto;
+}
+
+.forth-item::before {
+    content: "";
+    background-image: url('../images/одир.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 200px;
+    height: 200px;
+    display: block; 
+    margin: 0 auto;
+}
