--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -2,19 +2,19 @@
     <div class="container">
         <ul class="advantages__list">
             <li>
-                <h3 class="advantages__titles">Lorem ipsum dolor sit.</h3>
+                <h3 class="advantages__titles first-item">Lorem ipsum dolor sit.</h3>
                 <p class="advantages__paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex nulla illo unde culpa natus id reprehenderit esse vel veniam repudiandae?</p>
             </li>
             <li>
-                <h3 class="advantages__titles">Lorem ipsum dolor sit.</h3>
+                <h3 class="advantages__titles second-item">Lorem ipsum dolor sit.</h3>
                 <p class="advantages__paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex nulla illo unde culpa natus id reprehenderit esse vel veniam repudiandae?</p>
             </li>
             <li>
-                <h3 class="advantages__titles">Lorem ipsum dolor sit.</h3>
+                <h3 class="advantages__titles thirt-item">Lorem ipsum dolor sit.</h3>
                 <p class="advantages__paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex nulla illo unde culpa natus id reprehenderit esse vel veniam repudiandae?</p>
             </li>
             <li>
-                <h3 class="advantages__titles">Lorem ipsum dolor sit.</h3>
+                <h3 class="advantages__titles forth-item">Lorem ipsum dolor sit.</h3>
                 <p class="advantages__paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex nulla illo unde culpa natus id reprehenderit esse vel veniam repudiandae?</p>
             </li>
         </ul>
