--- a/src/sass/layouts/_advantages.scss
+++ b/src/sass/layouts/_advantages.scss
@@ -14,7 +14,7 @@
 
 .first-item::before {
     content: "";
-    background-image: url('../images/pngwing.com\ \(3\).png');
+    background-image: url('../images/125810746_1744136939087020_8377283448018247965_n.png');
     background-size: contain;
     background-repeat: no-repeat;
     width: 200px;
@@ -25,7 +25,7 @@
 
 .second-item::before {
     content: "";
-    background-image: url('../images/pngwing.com\ \(1\).png');
+    background-image: url('../images/vohra\ \(1\).png');
     background-size: contain;
     background-repeat: no-repeat;
     width: 200px;
@@ -36,7 +36,7 @@
 
 .thirt-item::before {
     content: "";
-    background-image: url('../images/рим.png');
+    background-image: url('../images/Новый\ проект.png');
     background-size: contain;
     background-repeat: no-repeat;
     width: 200px;
