--- a/src/sass/_portfolio.scss
+++ b/src/sass/_portfolio.scss
@@ -1,13 +1,42 @@
-.portfolio__list {
-    display: flex;
-    flex-wrap: wrap;
+@media screen and (min-width:320px) and (max-width:480px) {
+
+    .portfolio__list-item {
+        width: 220px;
+        height: 260px;
+     }
+
+     .portfolio__list{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+     }
+
+    
+     .portfolio__list-item {
+        margin: 0;
+    }
+
+    .portfolio__list-item {
+        margin-bottom: 40px;
+    }
 }
 
-.portfolio__list {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 100px 0;
+@media screen and (min-width:1200px) {
+    .portfolio__list {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+        padding: 100px 0;
+    }
+
+    .portfolio__list {
+        margin: -20px;
+    }
+    
+    .portfolio__list-item {
+        margin: 20px;
+    }
 }
 
 .portfolio__list-item {
@@ -27,19 +56,6 @@
 -moz-box-shadow: 0px 0px 39px 5px rgba(243,188,119,1);
 box-shadow: 0px 0px 39px 5px rgba(243,188,119,1);
 cursor: pointer;
-}
-
-.portfolio__list .portfolio__list-item {
-    margin-right: 40px;
-    margin-bottom: 40px;
-}
-
-.portfolio__list .portfolio__list-item:nth-child(5n + 5) {
-    margin-right: 0; 
-}
-
-.portfolio__list .portfolio__list-item:nth-last-child(-n + 5) {
-    margin-bottom: 0; 
 }
 
 .portfolio__title {
