--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -1,3 +1,18 @@
+@media screen and (min-width:320px) and (max-width:480px) {
+    .footer__address {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .footer__soc-list {
+        margin-bottom: 40px;
+    }
+
+    .footer__contacts {
+        margin-top: 40px;
+    }
+}
+
 .footer {
     background-color: var(--secondary-bg-color);
     padding: 40px 0;
