--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -1,3 +1,40 @@
+.logo {
+    padding: 6px 4px;
+    background-color: white;
+    text-transform: uppercase;
+    text-decoration: underline;
+    
+    color:black;
+}
+
+
+@media screen and (min-width:320px) and (max-width:480px) {
+    
+    .header {
+        margin-bottom:  40px;
+    }
+
+    .header__navigation {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .logo {
+       font-size: 36px;
+       text-align: center;
+       font-weight: 800;
+    }
+
+    .header__nav-list {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 0;
+        margin-top: 40px;
+
+    }
+}
+
 .header {
    background-color: var(--secondary-bg-color);
    padding: 30px 0;
@@ -8,14 +45,16 @@
     justify-content: space-between;
 }
 
-.header__nav-list {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.header__nav-list li:not(:last-child) {
-    margin-right: 70px;
+@media screen and (min-width:1200px) {
+    .header__nav-list {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .header__nav-list li:not(:last-child) {
+        margin-right: 70px;
+    }
 }
 
 .header__nav-item {
@@ -33,18 +72,12 @@
     cursor: pointer;
 }
 
-
-.logo {
-    padding: 6px 4px;
-
-    background-color: white;
-    border-radius: 2px;
-    text-transform: uppercase;
-    text-decoration: underline;
-    font-weight: 800;
-    font-size: 48px;
-
-    color:black;
+@media screen and (min-width:1200px) {
+    .logo {
+        border-radius: 2px;
+        font-weight: 800;
+        font-size: 48px;
+    }
 }
 
 .logo:hover,
