--- a/src/sass/components/_container.scss
+++ b/src/sass/components/_container.scss
@@ -1,7 +1,7 @@
 .container {
-    @media screen and (min-width:480px) {
+    @media screen and (min-width:320px) and (max-width:480px) {
         padding: 0 15px;
-        margin: 0 auto;
+        
     }
     @media screen and (min-width:768px) {
         padding: 0 32px;
