--- a/src/sass/_portfolio.scss
+++ b/src/sass/_portfolio.scss
@@ -1,23 +1,29 @@
 @media screen and (min-width:320px) and (max-width:480px) {
-
-    .portfolio__list-item {
-        width: 220px;
-        height: 260px;
-     }
-
-     .portfolio__list{
+    .portfolio__list{
         display: flex;
-        flex-direction: column;
-        align-items: center;
+        flex-wrap: wrap;
+        margin: -7.5px;
+        padding: 50px 0;
      }
 
-    
-     .portfolio__list-item {
-        margin: 0;
-    }
-
     .portfolio__list-item {
-        margin-bottom: 40px;
+        display: flex;
+        width: 216px;
+        height: auto;
+        background-color: var(--accent-color);
+        border-radius: 6px;
+        align-items: center;
+        justify-content: center;
+        margin: 7.5px;
+        text-align: center;
+        padding: 20px 0;
+     }
+
+    .portfolio__img {
+        width: 200px;
+        height: 200px;
+        object-fit: contain;
+        background-color: grey;
     }
 }
 
@@ -33,13 +39,8 @@
     .portfolio__list {
         margin: -20px;
     }
-    
-    .portfolio__list-item {
-        margin: 20px;
-    }
-}
 
-.portfolio__list-item {
+    .portfolio__list-item {
    width: 320px;
    height: 360px;
    display: flex;
@@ -48,7 +49,11 @@
    justify-content: center;
    background-color: var(--accent-color);
    border-radius: 6px;
+   margin: 20px;
 }
+    
+}
+
 
 .portfolio__list-item:hover, 
 .portfolio__list-item:focus {
