--- a/src/sass/_portfolio.scss
+++ b/src/sass/_portfolio.scss
@@ -1,27 +1,28 @@
-@media screen and (min-width:480px) and (max-width:768px) {
+@media screen and (min-width:320px) {
     .portfolio__list{
         display: flex;
         flex-wrap: wrap;
-        margin: -7.5px;
+        justify-content: center;
         padding: 50px 0;
+        margin: -10px;
      }
 
     .portfolio__list-item {
         display: flex;
-        width: 216px;
+        width: 130px;
         height: auto;
         background-color: var(--accent-color);
         border-radius: 6px;
         align-items: center;
         justify-content: center;
-        margin: 7.5px;
+        margin: 10px;
         text-align: center;
-        padding: 20px 0;
+        padding: 10px 0;
      }
 
     .portfolio__img {
-        width: 200px;
-        height: 200px;
+        width: 120px;
+        height: 120px;
         object-fit: contain;
         background-color: grey;
     }
@@ -50,6 +51,13 @@
    background-color: var(--accent-color);
    border-radius: 6px;
    margin: 20px;
+}
+
+.portfolio__img {
+    width: 300px;
+    height: 300px;
+    object-fit: contain;
+    background-color: grey;
 }
     
 }
