--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -1,4 +1,4 @@
-@media screen and (min-width:320px) and (max-width:480px) {
+@media screen and (min-width:320px) {
     .footer__address {
         display: flex;
         flex-direction: column;
@@ -11,6 +11,16 @@
     .footer__contacts {
         margin-top: 40px;
     }
+
+    .footer__contacts-item {
+       width: 290px;
+       
+    }
+
+    .footer__contacts-item a {
+        
+        font-size: 14px;
+     }
 }
 
 .footer {
