--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -8,7 +8,7 @@
 }
 
 
-@media screen and (min-width:320px) and (max-width:480px) {
+@media screen and (min-width:320px) {
 
     .header__navigation {
         display: flex;
