changed the names from English to Ukrainian

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,16 +1,27 @@
 <header class="header">
     <div class="container">
         <nav class="header__navigation">
+            <ul class="header__nav-list">
+                <li class="header__nav-item">
+                    <a class="header__link" href="./portfolio.html">Галерея</a>
+                </li>
+                <li class="header__nav-item">
+                    <a class="header__link" href="">Про мене</a>
+                </li>
+                <li class="header__nav-item">
+                    <a class="header__link" href="">Контакти</a>
+                </li>
+            </ul>
             <a class="logo" href="./index.html">Taraskina</a>
             <ul class="header__nav-list">
                 <li class="header__nav-item">
-                    <a class="header__link" href="./portfolio.html">portfolio</a>
+                    <a class="header__link" href="./portfolio.html">Галерея</a>
                 </li>
                 <li class="header__nav-item">
-                    <a class="header__link" href="">about</a>
+                    <a class="header__link" href="">Про мене</a>
                 </li>
                 <li class="header__nav-item">
-                    <a class="header__link" href="">contacts</a>
+                    <a class="header__link" href="">Контакти</a>
                 </li>
             </ul>
         </nav>
