--- a/src/sass/_portfolio.scss
+++ b/src/sass/_portfolio.scss
@@ -1,4 +1,4 @@
-@media screen and (min-width:320px) {
+@media screen and (min-width:320px) and (max-width:480px) {
     .portfolio__list{
         display: flex;
         flex-wrap: wrap;
@@ -24,7 +24,11 @@
         width: 120px;
         height: 120px;
         object-fit: contain;
-        background-color: grey;
+        background-color: white;
+    }
+
+    .portfolio__title {
+        font-size: 14px;
     }
 }
 
@@ -50,25 +54,27 @@
    justify-content: center;
    background-color: var(--accent-color);
    border-radius: 6px;
+   text-align: center;
    margin: 20px;
+   transition: transform 0.3s ease;
 }
 
 .portfolio__img {
     width: 300px;
     height: 300px;
     object-fit: contain;
-    background-color: grey;
+    background-color: #ffffff;
 }
     
 }
 
 
-.portfolio__list-item:hover, 
-.portfolio__list-item:focus {
+.portfolio__list-item:hover {
     box-shadow: 0px 0px 39px 5px rgba(243,188,119,1);
--moz-box-shadow: 0px 0px 39px 5px rgba(243,188,119,1);
-box-shadow: 0px 0px 39px 5px rgba(243,188,119,1);
-cursor: pointer;
+    -moz-box-shadow: 0px 0px 39px 5px rgba(243,188,119,1);
+    box-shadow: 0px 0px 39px 5px rgba(243,188,119,1);
+    cursor: pointer;
+    transform: scale(1.03); 
 }
 
 .portfolio__title {
