--- a/src/sass/layouts/_gallery.scss
+++ b/src/sass/layouts/_gallery.scss
@@ -1,13 +1,47 @@
 .gallery__list {
     display: flex;
-    justify-content: space-between;
+    align-items: center;
+    justify-content: center;
 }
 
-.gallery__list-discription {
-    position: relative;
-    text-align: center;
+.gallery__list .gallery__list-item:not(:last-child) {
+    margin-right: 50px;
+}
+
+.gallery__list .gallery__list-item {
+    transition: transform 0.3s ease;
+}
+
+.gallery__list .gallery__list-item:hover {
+    transform: scale(1.03); 
+}
+
+.gallery__list-img:hover {
+    box-shadow: 0px 0px 20px 2px rgba(243,188,119,1);
+}
+
+.gallery__list-img {
+   border-radius: 10px;
+   object-fit:cover;
 }
 
 .gallery__list-item {
-   border-radius: 10px;
-}
+    position: relative;
+  }
+  
+  .gallery__list-discription {
+    border-bottom-left-radius: 9px;
+    border-bottom-right-radius: 9px;
+    font-size: 24px;
+    font-weight: 700;
+    text-align: center;
+    position: absolute;
+    bottom: 4px;
+    left: 0;
+    width: 100%;
+    height: auto;
+    background-color: rgba(0, 0, 0, 0.8);
+    padding: 5px 10px;
+    margin: 0;
+    z-index: 1;
+  }
