--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -1,4 +1,4 @@
-@media screen and (min-width:320px) {
+@media screen and (min-width:320px) and (max-width:768px) {
     .footer__address {
         display: flex;
         flex-direction: column;
