--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -1,14 +1,20 @@
 .logo {
-    padding: 6px 4px;
+    padding: 4px 10px;
     background-color: white;
     text-transform: uppercase;
     text-decoration: underline;
     
     color:black;
+    @media screen and (min-width:320px) and (max-width:768px) {
+       width: auto;
+    }
+    @media screen and (min-width:1200px) {
+        min-width: 330px;
+    }
 }
 
 
-@media screen and (min-width:320px) {
+@media screen and (min-width:320px) and (max-width:768px) {
 
     .header__navigation {
         display: flex;
@@ -38,18 +44,18 @@
 
 .header__navigation {
     display: flex;
+    align-items: center;
     justify-content: space-between;
 }
 
 @media screen and (min-width:1200px) {
     .header__nav-list {
         display: flex;
-        justify-content: center;
         align-items: center;
     }
     
     .header__nav-list li:not(:last-child) {
-        margin-right: 70px;
+        margin-right: 30px;
     }
 }
 
