--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -31,7 +31,10 @@
                     </a>
                 </li>
             </ul>
-            <a class="logo" href="./index.html">Taraskina</a>
+            <div class="footer__logo-wrapper">
+                <a class="logo" href="./index.html">Taraskina</a>
+                <p class="footer__discription">Taraskina &copy; 2023 Всі права захищено</p>
+            </div>
             <ul class="footer__contacts">
                 <li class="footer__contacts-item">
                     <a class="footer__contacts-link" href="tel:380683391302">
