--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -1,3 +1,5 @@
+
+
 .logo {
     padding: 4px 10px;
     background-color: white;
@@ -44,14 +46,15 @@
 
 .header__navigation {
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: space-between;
 }
 
 @media screen and (min-width:1200px) {
     .header__nav-list {
         display: flex;
         align-items: center;
+        margin-top: 20px;
     }
     
     .header__nav-list li:not(:last-child) {
