add variable from overley

--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -1,8 +1,13 @@
 :root {
+    // main-palete
     --main-text-color: #f3bc77;
     --background-color: #1d1716;
     --secondary-bg-color: #402a23;
     --accent-color: #a55233;
+// svg-palete
     --svg-fill-first: #4267B2;
     --svg-fill-second:#C13584;
+// overley-palete
+    --overley-color: rgba(110, 110, 110, 0.5);
+    --overley-text-color: #f2f2f2;
 }
