--- a/src/sass/_portfolio.scss
+++ b/src/sass/_portfolio.scss
@@ -21,6 +21,8 @@
      }
 
     .portfolio__img {
+        display: block;
+
         width: 120px;
         height: 120px;
         object-fit: contain;
@@ -60,8 +62,9 @@
 }
 
 .portfolio__img {
-    width: 300px;
-    height: 300px;
+    display: block;
+
+    width: 100%;
     object-fit: contain;
     background-color: #ffffff;
 }
@@ -83,4 +86,47 @@
 
 .portfolio__img {
     border-radius: 8px;
+}
+
+
+.portfolio__img-wrapper {
+    @media screen and (min-width:320px) {
+        width: 120px;
+        height: 120px;
+    }
+    @media screen and (min-width:1200px) {
+        width: 300px;
+        height: 300px;
+    }
+    position: relative;
+    overflow: hidden;
+    margin: 0;
+    
+}
+
+.portfolio__overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+
+    background-color: var(--overley-color);
+    transform: translateY(100%);
+    transition: transform 250ms ease;
+}
+
+.portfolio__list-item:hover .portfolio__overlay {
+    transform: translateY(0);
+}
+
+.portfolio__overlay  p {
+    color: var(--overley-text-color);
+    font-size: 16px;
+    font-weight: 700;
 }
