--- a/src/sass/_portfolio.scss
+++ b/src/sass/_portfolio.scss
@@ -9,7 +9,7 @@
 
     .portfolio__list-item {
         display: flex;
-        width: 130px;
+        width: 135px;
         height: auto;
         background-color: var(--accent-color);
         border-radius: 6px;
@@ -59,6 +59,7 @@
    text-align: center;
    margin: 20px;
    transition: transform 0.3s ease;
+   transition-duration: 500ms;
 }
 
 .portfolio__img {
@@ -78,6 +79,7 @@
     box-shadow: 0px 0px 39px 5px rgba(243,188,119,1);
     cursor: pointer;
     transform: scale(1.03); 
+    
 }
 
 .portfolio__title {
@@ -119,6 +121,7 @@
     background-color: var(--overley-color);
     transform: translateY(100%);
     transition: transform 250ms ease;
+    transition-duration: 500ms;
 }
 
 .portfolio__list-item:hover .portfolio__overlay {
