--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -60,6 +60,7 @@
     padding: 30px;
     border-radius: 50%;
     background-color: var(--background-color);
+    transition-duration: 500ms;
 }
 
 .footer__soc-svg {
@@ -112,6 +113,7 @@
 
 .footer__contacts-item {
     background-color: #1d1716;
+    transition-duration: 500ms;
 }
 
 .footer__contacts-item:hover {
