--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -2,7 +2,7 @@
 
 .logo {
     padding: 4px 10px;
-    background-color: white;
+    background-color: var(--overley-text-color);
     text-transform: uppercase;
     text-decoration: underline;
     
@@ -65,6 +65,7 @@
 .header__nav-item {
     padding: 12px 18px;
     border-radius: 40px;
+    transition-duration: 500ms;
 }
 
 .header__nav-item:hover,
