--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -6,6 +6,7 @@
     text-transform: uppercase;
     text-decoration: underline;
     
+    transition: 500ms  var(--timing-function);
     color:black;
     @media screen and (min-width:320px) and (max-width:768px) {
        width: auto;
@@ -65,7 +66,7 @@
 .header__nav-item {
     padding: 12px 18px;
     border-radius: 40px;
-    transition-duration: 500ms;
+    transition: 500ms  var(--timing-function);
 }
 
 .header__nav-item:hover,
