--- a/src/sass/_portfolio.scss
+++ b/src/sass/_portfolio.scss
@@ -114,6 +114,7 @@
     height: 100%;
 
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     
@@ -131,4 +132,8 @@
     color: var(--overley-text-color);
     font-size: 16px;
     font-weight: 700;
+}
+
+.portfolio__paragraph {
+    margin-bottom: 20px;
 }
