--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,13 +1,22 @@
 <header class="header">
     <div class="container">
         <nav class="header__navigation">
-            <a class="logo" href="./index.html">Taraskina</a>
+            <div class="logo-wrapper">
+                <svg class="logo__svg" width="70" height="80">
+                    <use href="./images/symbol-defs.svg#icon-symbol-left"></use>
+                </svg>
+                <a class="logo" href="./index.html">Taraskina</a>
+                <svg class="logo__svg" width="70" height="80">
+                    <use href="./images/symbol-defs.svg#icon-symbol-right"></use>
+                </svg>
+            </div>
+
             <ul class="header__nav-list">
                 <li class="header__nav-item">
                     <a class="header__link" href="./portfolio.html">Галерея</a>
                 </li>
                 <li class="header__nav-item">
-                    <a class="header__link" href="">Про мене</a>
+                    <a class="header__link" href="#about">Про мене</a>
                 </li>
                 <li class="header__nav-item">
                     <a class="header__link" href="">Контакти</a>
