--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,16 +1,32 @@
 <section class="about">
     <div class="container">
-        <h2 class="title animate__animated animate__backInLeft">Про мене</h2>
+        <h2 class="title animate__animated animate__backInLeft" id="about" >Про мене</h2>
         <div class="about__container">
-            <div class="about__container-img">
+            <div class="about__container-img animate__animated animate__backInUp">
                 <img class="about__img" src="https://scontent.flwo4-2.fna.fbcdn.net/v/t31.18172-8/21083509_163659424185346_4143523546011725385_o.jpg?_nc_cat=100&ccb=1-7&_nc_sid=7f8c78&_nc_ohc=_bkUlLSYEOEAX-HQKPv&_nc_ht=scontent.flwo4-2.fna&oh=00_AfCBFpTXSTPxHMvH8pXIrg92196uga9kSUG2Co_LXNO5Tg&oe=656F98E5" alt="Катя" width="400">
             </div>
-            <div class="about__container-info">
-                <p class="about__paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita quibusdam facere consequatur perspiciatis corporis quis officiis velit eum, odio facilis, ad sint nostrum soluta inventore nihil iste cum commodi aliquam!</p>
-                <p class="about__paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita quibusdam facere consequatur perspiciatis corporis quis officiis velit eum, odio facilis, ad sint nostrum soluta inventore nihil iste cum commodi aliquam!</p>
-                <p class="about__paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita quibusdam facere consequatur perspiciatis corporis quis officiis velit eum, odio facilis, ad sint nostrum soluta inventore nihil iste cum commodi aliquam!</p>
-                <p class="about__paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita quibusdam facere consequatur perspiciatis corporis quis officiis velit eum, odio facilis, ad sint nostrum soluta inventore nihil iste cum commodi aliquam!</p>
-                <p class="about__paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita quibusdam facere consequatur perspiciatis corporis quis officiis velit eum, odio facilis, ad sint nostrum soluta inventore nihil iste cum commodi aliquam!</p>
+            <div class="about__container-info animate__animated animate__backInRight">
+                <p class="about__paragraph">
+                    Тарасевич-Гривінська Катерина Андріївна. Народилася 28 серпня 1995 року у м.Івано-Франківськ. Навчалася в ЗОШ №13. Змалечку була дуже творчою, тому відвідувала всі мистецькі шкільні гуртки(танці, бісер, літературний клас) та з 5 класу розпочала навчання в Івано-франківській художній шолі, яку закінчила навідмінно.
+                </p>
+                <p class="about__paragraph">
+                    2012р. - 2015р. - навчалася в Косівському училищі прикладного та декоративного мистецтва Львівської національної академії мистецтв, по спеціальності “художнє ткацтво”, на бюджеті зі стипендією. Захист дипломної роботи тканої ширми “Сталий світ”, оцінка “відмінно”  з відзнакою.
+                </p>
+                <p class="about__paragraph">
+                    2016р. - 2020р. навчалася на філософському факультеті у Львівському національному університеті імені Івана Франка, на контрактній основі.  Отримала диплом бакалавра по спеціальності “культурологія”. Дипломна робота «Вплив народного мистецтва на повсякденну культуру сучасних українців: гуцульський контекст.» Оцінка “відмінно”. 
+                    2015-2016 роки - творчі пошуки, робота над створенням персональної виставки.
+                </p>
+                <p class="about__paragraph">
+                    2020р. (квітень) - заснування власного бренду “Taraskina” (“Тараскіна”) з виготовлення гобеленів та іншого ручного текстилю.
+                    2020-2021р. - робота консультантом в British american tobacco (BAT) Україна.
+                    2018р. Лютий - відкриття виставки “Філософія серця” музей мистецтв Прикарпаття (обласний художній музей) м.Івано-франківськ. Були представлена колаборація ткацтва та дерева в роботі Гривінського Михайла
+                </p>
+                <p class="about__paragraph">
+                    2018р. (травень) - участь у 12-тій міжнародній бієнале сучасного художнього текстилю <a class="about__link" href="http://www.scythiatextile.com/scythia-2018.html" target="_blank" rel="noreferrer noopener">“Scytnia”</a>, музей мистецтв Прикарпаття (Обласний краєзнавчий музей).
+                    2018р.(жовтень)  - відкриття персональної виставки <a class="about__link" href="https://www.0342.ua/afisha/7280/tvorcij-proekt-filosofia-serca" target="_blank" rel="noreferrer noopener">“Філософія серця”</a>“Філософія серця” у музеї народного мистецтва та побуту Гуцульщини, м.Косів.
+                    2019р. - участь в обласному фестивалі кераміки, ремесел та фольклору “Мальований дзбаник” м.Косів.
+                    2022р. (серпень-вересень) - участь у ІІ Всеукраїнській виставці творчих робіт “З любов'ю до України” музей Петра Обаля м. Стрий.
+                </p>
             </div>
         </div>
     </div>
