замінив текст lorem на основний

--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -2,20 +2,20 @@
     <div class="container">
         <ul class="advantages__list">
             <li>
-                <h3 class="advantages__titles first-item">Lorem ipsum dolor sit.</h3>
-                <p class="advantages__paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex nulla illo unde culpa natus id reprehenderit esse vel veniam repudiandae?</p>
+                <h3 class="advantages__titles first-item">Неповторний стиль.</h3>
+                <p class="advantages__paragraph">Витвори створюються індивідуальними тхніками в єдиному екземпярі</p>
             </li>
             <li>
-                <h3 class="advantages__titles second-item">Lorem ipsum dolor sit.</h3>
-                <p class="advantages__paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex nulla illo unde culpa natus id reprehenderit esse vel veniam repudiandae?</p>
+                <h3 class="advantages__titles second-item">Якість та увага до деталей.</h3>
+                <p class="advantages__paragraph">Роботи виготовляються високотехнологічно з тільки високоякісних матеріалів.</p>
             </li>
             <li>
-                <h3 class="advantages__titles thirt-item">Lorem ipsum dolor sit.</h3>
-                <p class="advantages__paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex nulla illo unde culpa natus id reprehenderit esse vel veniam repudiandae?</p>
+                <h3 class="advantages__titles thirt-item">Планування та ескізування.</h3>
+                <p class="advantages__paragraph">Довготривали процес створення фінального малюнка для роботи. Врахувння всіх побжань замовниа</p>
             </li>
             <li>
-                <h3 class="advantages__titles forth-item">Lorem ipsum dolor sit.</h3>
-                <p class="advantages__paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex nulla illo unde culpa natus id reprehenderit esse vel veniam repudiandae?</p>
+                <h3 class="advantages__titles forth-item">Доступність та доставка.</h3>
+                <p class="advantages__paragraph">Моживість придвати бажану роботу з доставкою по всьому світі</p>
             </li>
         </ul>
     </div>
