--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -16,7 +16,7 @@
                     <a class="header__link" href="./portfolio.html">Галерея</a>
                 </li>
                 <li class="header__nav-item">
-                    <a class="header__link" href="#about">Про мене</a>
+                    <a class="header__link" href="">Про мене</a>
                 </li>
                 <li class="header__nav-item">
                     <a class="header__link" href="">Контакти</a>
