--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,6 +1,6 @@
 <section class="about">
     <div class="container">
-        <h2 class="title animate__animated animate__backInLeft" id="about" >Про мене</h2>
+        <h2 class="title animate__animated animate__backInLeft">Про мене</h2>
         <div class="about__container">
             <div class="about__container-img animate__animated animate__backInUp">
                 <img class="about__img" src="https://scontent.flwo4-2.fna.fbcdn.net/v/t31.18172-8/21083509_163659424185346_4143523546011725385_o.jpg?_nc_cat=100&ccb=1-7&_nc_sid=7f8c78&_nc_ohc=_bkUlLSYEOEAX-HQKPv&_nc_ht=scontent.flwo4-2.fna&oh=00_AfCBFpTXSTPxHMvH8pXIrg92196uga9kSUG2Co_LXNO5Tg&oe=656F98E5" alt="Катя" width="400">
