--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,8 +1,9 @@
 @import './common';
 @import './example';
 
-// portfolio
+// pages
 @import './portfolio';
+@import './about';
 // base
 @import './base/reset';
 @import './base/base';
