rename contacts link and add main link

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -13,13 +13,13 @@
 
             <ul class="header__nav-list">
                 <li class="header__nav-item">
+                    <a class="header__link" href="./index.html">Головна</a>
+                </li>
+                <li class="header__nav-item">
                     <a class="header__link" href="./portfolio.html">Галерея</a>
                 </li>
                 <li class="header__nav-item">
-                    <a class="header__link" href="">Про мене</a>
-                </li>
-                <li class="header__nav-item">
-                    <a class="header__link" href="">Контакти</a>
+                    <a class="header__link" href="./about.html">Про мене</a>
                 </li>
             </ul>
         </nav>
