styles for mobile and tablet

--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,19 +1,19 @@
 <section class="advantages section">
     <div class="container">
         <ul class="advantages__list">
-            <li>
+            <li class="advantages__list-item">
                 <h3 class="advantages__titles first-item">Неповторний стиль.</h3>
                 <p class="advantages__paragraph">Витвори створюються індивідуальними тхніками в єдиному екземпярі</p>
             </li>
-            <li>
+            <li class="advantages__list-item">
                 <h3 class="advantages__titles second-item">Якість та увага до деталей.</h3>
                 <p class="advantages__paragraph">Роботи виготовляються високотехнологічно з тільки високоякісних матеріалів.</p>
             </li>
-            <li>
+            <li class="advantages__list-item">
                 <h3 class="advantages__titles thirt-item">Планування та ескізування.</h3>
                 <p class="advantages__paragraph">Довготривали процес створення фінального малюнка для роботи. Врахувння всіх побжань замовниа</p>
             </li>
-            <li>
+            <li class="advantages__list-item">
                 <h3 class="advantages__titles forth-item">Доступність та доставка.</h3>
                 <p class="advantages__paragraph">Моживість придвати бажану роботу з доставкою по всьому світі</p>
             </li>
