--- a/src/sass/layouts/_advantages.scss
+++ b/src/sass/layouts/_advantages.scss
@@ -1,17 +1,3 @@
-.advantages__list {
-    display: flex;
-}
-
-.advantages__list li:not(:last-child) {
-    margin-right: 60px;
-}
-
-.advantages__titles {
-    text-align: center;
-    margin-bottom: 30px;
-    font-size: 24px;
-}
-
 .first-item::before {
     content: "";
     background-image: url('../images/125810746_1744136939087020_8377283448018247965_n.png');
@@ -54,4 +40,59 @@
     height: 200px;
     display: block; 
     margin: 0 auto;
+}
+
+
+@media screen and (min-width:320px) {
+    .advantages__list {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .advantages__list li:not(:last-child) {
+        margin-right: 0px;
+        margin-bottom: 60px;
+    }
+
+    .advantages__titles {
+        margin-bottom: 20px;
+        font-size: 18px;
+    }
+
+    .advantages__paragraph {
+        font-size: 18px;
+    }
+
+    .advantages__list-item {
+        text-align: center;
+        width: 280px;
+    }
+}
+@media screen and (min-width:768px) {
+    .advantages__list {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+}
+@media screen and (min-width:1200px) {
+    .advantages__list {
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    .advantages__list li:not(:last-child) {
+        margin-bottom: 0px;
+    }
+
+    .advantages__titles {
+        margin-bottom: 15px;
+        font-size: 24px;
+    }
+
+    .advantages__list-item {
+        width: 380px;
+    }
 }
