styles for mobile and tablet

--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,23 +1,23 @@
-<section class="gallery section">
+<section class="gallery">
     <div class="container">
         <h2 class="title">Галерея</h2>
         <div>
             <ul class="gallery__list">
                 <li class="gallery__list-item">
                     <a class="gallery__link" href="portfolio.html">
-                        <img class="gallery__list-img" src="./images/weaving.jpg" width="500" height="500" alt="Гобелени">
+                        <img class="gallery__list-img" src="./images/weaving.jpg" alt="Гобелени">
                     </a>
                     <p class="gallery__list-discription">Ткацтво</p>
                 </li>
                 <li class="gallery__list-item">
                     <a class="gallery__link" href="portfolio.html">
-                        <img class="gallery__list-img" src="./images/painting.jpg" width="500" height="500" alt="Живопис">
+                        <img class="gallery__list-img" src="./images/painting.jpg" alt="Живопис">
                     </a>
                     <p class="gallery__list-discription">Живопис</p>
                 </li>
                 <li class="gallery__list-item">
                     <a class="gallery__link" href="portfolio.html">
-                        <img class="gallery__list-img" src="./images/Hutsul-ceramics.jpg" width="500" height="500" alt="Косівський розпис">
+                        <img class="gallery__list-img" src="./images/Hutsul-ceramics.jpg" alt="Косівський розпис">
                     </a>
                     <p class="gallery__list-discription">Косівський розпис</p>
                 </li>
