--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,4 +1,4 @@
-<section class="about">
+<section class="about section">
     <div class="container">
         <h2 class="title animate__animated animate__backInLeft">Про мене</h2>
         <div class="about__container">
