create link with class button markup and styled

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -13,6 +13,7 @@
 @import './components/container';
 @import './components/section';
 @import './components/title';
+@import './components/button';
 // layouts
 @import './layouts/header';
 @import './layouts/hero';
