--- a/src/sass/components/_title.scss
+++ b/src/sass/components/_title.scss
@@ -1,8 +1,10 @@
 .title {
-
-    font-size: 60px;
-    font-weight: 700;
-
+    font-size: 45px;
     text-align: center;
     margin-bottom: 40px;
+
+    @media screen and (min-width:768px) {
+        font-size: 60px;
+        font-weight: 700;
+    }
 }
