--- a/src/sass/layouts/_advantages.scss
+++ b/src/sass/layouts/_advantages.scss
@@ -70,11 +70,15 @@
         width: 280px;
     }
 }
-@media screen and (min-width:768px) {
+@media screen and (min-width:768px) and (max-width:1199px) {
     .advantages__list {
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: space-between;
+    }
+
+    .advantages__list-item {
+        width: 300px;
     }
 }
 @media screen and (min-width:1200px) {
@@ -90,9 +94,5 @@
     .advantages__titles {
         margin-bottom: 15px;
         font-size: 24px;
-    }
-
-    .advantages__list-item {
-        width: 380px;
     }
 }
