--- a/src/sass/layouts/_hero.scss
+++ b/src/sass/layouts/_hero.scss
@@ -8,7 +8,11 @@
 
 .hero__title {
     text-align: center;
-    font-size: 64px;
+    font-size: 45px;
     font-weight: 800;
-    color: white;
+    color: var(--overley-text-color);
+
+    @media screen and (min-width:768px) {
+        font-size: 64px;
+    }
 }
