add black color in variable pallet

--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -1,5 +1,5 @@
 :root {
-    // main-palete
+// main-palete
     --accent-color: #a55233;
     --main-text-color: #f3bc77;
     --background-color: #1d1716;
@@ -10,6 +10,7 @@
 // overley-palete
     --overley-text-color: #f2f2f2;
     --overley-color: rgba(110, 110, 110, 0.5);
+    --logo-text-color:#000000;
 // animation
     --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
