refactored the header code

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,16 +1,15 @@
 <header class="header">
     <div class="container">
         <nav class="header__navigation">
-            <div class="logo-wrapper">
-                <svg class="logo__svg" width="70" height="80">
+            <div class="header__wrapper">
+                <svg class="header__svg">
                     <use href="./images/symbol-defs.svg#icon-symbol-left"></use>
                 </svg>
                 <a class="logo" href="./index.html">Taraskina</a>
-                <svg class="logo__svg" width="70" height="80">
+                <svg class="header__svg">
                     <use href="./images/symbol-defs.svg#icon-symbol-right"></use>
                 </svg>
             </div>
-
             <ul class="header__nav-list">
                 <li class="header__nav-item">
                     <a class="header__link" href="./index.html">Головна</a>
