refactored the about code

--- a/src/sass/layouts/_about.scss
+++ b/src/sass/layouts/_about.scss
@@ -1,68 +1,63 @@
 .about {
-    padding-top: 80px;
-    width: 100%;
-}
-
-.about__container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-}
-
-.about__img {
-    border-radius: 100px;
-     box-shadow: 0px 0px 39px 5px rgba(243,188,119,1);
-    -moz-box-shadow: 0px 0px 39px 5px rgba(243,188,119,1);
-    box-shadow: 0px 0px 39px 5px rgba(243,188,119,1);
-}
-
-
-@media screen and (min-width:320px) {
-    .about__container {
-        flex-direction: column;
+    &__container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
     }
 
-    .about__img {
-        width: 290px;
+    &__img {
+        border-radius: 100px;
+        box-shadow: 0px 0px 39px 5px rgba(243,188,119,1);
+        box-shadow: 0px 0px 39px 5px rgba(243,188,119,1);
+        box-shadow: 0px 0px 39px 5px rgba(243,188,119,1);
     }
 
-    .about__container-info {
-        margin-left: 0;
-    }
-    .about__container-img {
+    &__paragraph-info {
         margin-bottom: 40px;
     }
 }
+
+@media screen and (min-width:320px) {
+    .about {
+        &__container {
+            flex-direction: column;
+        }
+
+        &__container-img {
+            margin-bottom: 40px;
+        }
+
+        &__img {
+            width: 290px;
+        }
+
+        &__container-info {
+            margin-left: 0;
+        }
+    }
+}
+
 @media screen and (min-width:768px) {
-    .about__container {
-        flex-direction: row;
-    }
+    .about {
+       &__container {
+            flex-direction: row;
+        }
 
-    .about__container-info {
-        margin-left: 80px;
-    }
-    .about__container-img {
-        margin-bottom: 0;
+        &__container-img {
+            margin-bottom: 0;
+        }
+
+        &__container-info {
+            margin-left: 80px;
+        }
     }
 }
+
 @media screen and (min-width:1200px) {
-    .about__img {
-        width: 400px;
+    .about {
+        &__img {
+            width: 400px;
+        }
     }
 }
-
-.about__paragraph-info {
-    margin-bottom: 40px;
-}
-
-// .about__paragraph {
-//     width: 900px;
-//     margin-bottom: 10px;
-//     text-align: justify;
-//     margin-bottom: 20px;
-// }
-// .about__link {
-//     font-weight: bold;
-//     color: var(--accent-color);
-// }
