--- a/src/sass/layouts/_hero.scss
+++ b/src/sass/layouts/_hero.scss
@@ -1,18 +1,18 @@
 .hero {
     padding: 300px 0;
+    text-align: center;
     background-image: linear-gradient(to bottom, rgba(10, 10, 10, 0.5), rgba(20, 20, 20, 0.7)), url(../images/background-img.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-}
 
-.hero__title {
-    text-align: center;
-    font-size: 45px;
-    font-weight: 800;
-    color: var(--overley-text-color);
-
-    @media screen and (min-width:768px) {
-        font-size: 64px;
+    &__title {
+        font-size: 45px;
+        font-weight: 800;
+        color: var(--overley-text-color);
+    
+        @media screen and (min-width:768px) {
+            font-size: 64px;
+        }
     }
 }
