moved the styles from the header to a separate mobile-menu file

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -15,6 +15,7 @@
 @import './components/title';
 @import './components/logo';
 @import './components/button';
+@import './components/mobile-menu';
 // layouts
 @import './layouts/header';
 @import './layouts/hero';
