--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -10,7 +10,6 @@
                     <use href="./images/symbol-defs.svg#icon-symbol-right"></use>
                 </svg>
             </div>
-
             <button 
                 type="button" 
                 class="menu-button" 
@@ -21,38 +20,25 @@
                 <svg 
                     width="20" 
                     height="20"
-                    aria-label="Перемикач мобільного меню">
-                    
-                        <use class="icon-cross" href="./images/symbol-defs.svg#icon-cross"></use>
-                        <use class="icon-menu" href="./images/symbol-defs.svg#icon-menu"></use>
+                    aria-label="Перемикач мобільного меню"
+                >
+                    <use class="icon-cross" href="./images/symbol-defs.svg#icon-cross"></use>
+                    <use class="icon-menu" href="./images/symbol-defs.svg#icon-menu"></use>
                 </svg>
             </button>
-
-            <div class="menu-container" id="menu-container" dara-menu>
-                <ul class="menu-container__list">
-                    <li class="menu-container__item">
-                        <a class="menu-container__link" href="./index.html">Головна</a>
+            <div class="menu-container" id="menu-container" data-menu>
+                <ul class="header__nav-list">
+                    <li class="header__nav-item">
+                        <a class="header__link" href="./index.html">Головна</a>
                     </li>
-                    <li class="menu-container__item">
-                        <a class="menu-container__link" href="./portfolio.html">Галерея</a>
+                    <li class="header__nav-item">
+                        <a class="header__link" href="./portfolio.html">Галерея</a>
                     </li>
-                    <li class="menu-container__item">
-                        <a class="menu-container__link" href="./about.html">Про мене</a>
+                    <li class="header__nav-item">
+                        <a class="header__link" href="./about.html">Про мене</a>
                     </li>
                 </ul>
             </div>
-
-            <ul class="header__nav-list">
-                <li class="header__nav-item">
-                    <a class="header__link" href="./index.html">Головна</a>
-                </li>
-                <li class="header__nav-item">
-                    <a class="header__link" href="./portfolio.html">Галерея</a>
-                </li>
-                <li class="header__nav-item">
-                    <a class="header__link" href="./about.html">Про мене</a>
-                </li>
-            </ul>
         </nav>
     </div>
 </header>
