--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -24,7 +24,6 @@
     .header__nav-list {
         display: flex;
         align-items: center;
-        margin-top: 20px;
     }
 
     .header__link {
@@ -57,11 +56,11 @@
         }
 
         .header__nav-list {
-            display: none;
+            height: 100%;
+            background-color: var(--secondary-bg-color);
             flex-direction: column;
             align-items: center;
             margin: 0;
-            margin-top: 40px;
         }
 
         .header__link {
